Added additional buttons for navigation to index.html and pokemon.html. Adjusted main.css so that the navigation buttons will fit better. Modified pokemon.html to fix buttons, adjust table structure, and to make more things centered.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <a href="affiliations.html">Affiliations</a>
         <a href="types.html">Types</a>
         <a href="battles.html">Battles</a>
+        <a href="pokemontypes.html">Pokemon Types</a>
+        <a href="pokemonpeople.html">Owned Pokemon</a>
+        <a href="peoplebattles.html">Player Battles</a>
      </nav>
      <main>
         <section>  
