Fixed form visibility

--- a/pokemon.html
+++ b/pokemon.html
@@ -126,7 +126,7 @@
                     </table>
                     <p>&nbsp;</p>
                     </div> <!-- browse -->
-                    <div id="insert">
+                    <div id="insert" style="display: none">
                         <form method="POST" id="addPokemon">
                             <legend><strong>Add Pokemon</strong></legend>
                               <fieldset class="fields">
@@ -151,7 +151,7 @@
                             </form> 
                     </div><!-- insert -->
                     <p>&nbsp;</p>
-                    <div id="update">
+                    <div id="update" style="display: none">
                         <form method="POST" id="updatePokemon">
                             <legend><strong>Update Pokemon</strong></legend>
                               <fieldset class="fields">
@@ -179,7 +179,7 @@
                             </form> 
                     </div><!-- update -->
                     <p>&nbsp;</p>
-                    <div id="delete" style="display: block">
+                    <div id="delete" style="display: none">
                       <form method="POST" id="deletePokemon">
                           <legend><strong>Delete Pokemon</strong></legend>
                               <fieldset class="fields">
