--- a/pokemon.html
+++ b/pokemon.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Pokemon</title>
+<title>Pokemon Management Database - Pokemon</title>
 <link href="main.css" rel="stylesheet" type="text/css" />
 <script language="JavaScript">
 		function showform(dowhat) {
@@ -58,6 +58,7 @@
         <a href="affiliations.html">Affiliations</a>
         <a href="types.html">Types</a>
         <a href="battles.html">Battles</a>
+        <br><br>
         <a href="pokemontypes.html">Pokemon Types</a>
         <a href="pokemonpeople.html">Owned Pokemon</a>
         <a href="peoplebattles.html">Player Battles</a>
@@ -137,6 +138,7 @@
                                     <option value="1">True</option>
                                     <option value="2">False</option>
                                     </select>
+                                    <br>
                                 <label> Rarity </label> <select name="pokeRarity">
                                     <option value="0">&nbsp;</option>
                                     <option value="1">Common</option>
@@ -161,16 +163,15 @@
                                 <label> Pokemon Name </label> <input type="text" name="pokeName" value="Pikachu">
                                 <br>
                                 <label> Is it a baby Pokemon?  </label>  <select name="isBaby">
-                                    <option value="0">&nbsp;</option>
+                                    <option value="0">False</option>
                                     <option value="1">True</option>
-                                    <option value="2">False</option>
                                     </select>
+                                  <br>
                                 <label> Rarity </label> <select name="pokeRarity">
-                                    <option value="0">&nbsp;</option>
-                                    <option value="1">Common</option>
-                                    <option value="2">Rare</option>
-                                    <option value="3">Legendary</option>
-                                    <option value="4">Mythical</option>
+                                    <option value="0">Common</option>
+                                    <option value="1">Rare</option>
+                                    <option value="2">Legendary</option>
+                                    <option value="3">Mythical</option>
                                     </select>
                           </fieldset>
                           <p id = "center">
