Changes to HTML pages (#3)
* Updated CONCAT in DML.sql to include a space in People table.

* Modify People Affiliations in browse table and insert/update options

* Adjusted column names for browse and variables in pokemonpeople.html

* Adjusted select options for Pokemon and Type in pokemontypes.html

* Fixed row 2 of browse in pokemonpeople.html

--- a/people.html
+++ b/people.html
@@ -79,28 +79,28 @@
                       <tr>
                         <th>peopleid</th>
                         <th>peopleName</th>
-                        <th>affiliationID</th>
+                        <th>affiliation</th>
                         <th>Edit Entry</th>
                         <th>Delete Entry</th>
                       </tr>
                       <tr>
                         <td align="right">1</td>
                         <td>Jessie</td>
-                        <td align="right">1</td>
+                        <td align="right">Team Rocket Agent</td>
                         <td><a href="#" onClick="updatePerson('this.peopleID')">Edit</a></td>
                         <td><a href="#" onclick="deletePerson('this.peopleID')">Delete</a></td>
                       </tr>
                       <tr>
                         <td align="right">2</td>
                         <td>Misty</td>
-                        <td align="right">2</td>
+                        <td align="right">Trainer Gym Leader</td>
                         <td><a href="#" onClick="updatePerson('this.peopleID')">Edit</a></td>
                         <td><a href="#" onclick="deletePerson('this.peopleID')">Delete</a></td>
                       </tr>
                       <tr>
                         <td align="right">3</td>
                         <td>Ash</td>
-                        <td align="right">3</td>
+                        <td align="right">Trainer Apprentice</td>
                         <td><a href="#" onClick="updatePerson('this.peopleID')">Edit</a></td>
                         <td><a href="#" onclick="deletePerson('this.peopleID')">Delete</a></td>
                       </tr>
@@ -115,9 +115,9 @@
                                 <br>
                                 <label> Affiliation </label> <select name="affiliation">
                                   <option value="0">&nbsp;</option>
-                                  <option value="1">1 - Team Rocket Agent</option>
-                                  <option value="2">2 - Trainer Gym Leader</option>
-                                  <option value="3">3 - Trainer Apprentice</option>
+                                  <option value="1">Team Rocket Agent</option>
+                                  <option value="2">Trainer Gym Leader</option>
+                                  <option value="3">Trainer Apprentice</option>
                                   </select>
                                   <br>
                               <button type="submit" id="addPerson">Add Person</button>
@@ -136,9 +136,9 @@
                                 <label> Name </label> <input type="text" name="peopleName" value="Jessie">
                                 <br>
                                 <label> Affiliation  </label><select name="affiliation">
-                                  <option value="0">1 - Team Rocket Agent</option>
-                                  <option value="1">2 - Trainer Gym Leader</option>
-                                  <option value="2">3 - Trainer Apprentice</option>
+                                  <option value="0">Team Rocket Agent</option>
+                                  <option value="1">Trainer Gym Leader</option>
+                                  <option value="2">Trainer Apprentice</option>
                                   </select>
                                   <br><br>
                           </fieldset>
