changed page description

--- a/affiliations.html
+++ b/affiliations.html
@@ -31,7 +31,7 @@
 
             <article id = "affiliations">
                 <p id = "center">
-                    Affiliations and ranks of people.
+                    Affiliations and ranks of people
                 </p>
 
                 <table border="1" cellpadding="5" id="centerMargin">
